[package]
name = "IDK"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_wgpu_backend = "0.19"
chrono = "0.4"
pollster = "0.2"
egui = "0.19"
epi = "0.17"
egui_winit_platform = "0.16"
wgpu = "0.13"
winit = { version="0.27.3", features = ["x11"]}
env_logger = "0.11.6"
log = "0.4.25"
rfd = "0.15.1"
